# anime-matcher

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pc-release.yml
anime-matcher-pc/: README.md  requirements.txt
anime-matcher-pc/src/core/: processor.py
anime-matcher-pc/src/gui/: main_window.py  rule_manager.py  worker.py
anime-matcher-pc/src/utils/: paths.py
data/: matcher_storage.db
docs/: privileged-rules.md  recognition-rules.md  render-rules.md
src/anime_matcher/: __init__.py  anitopy_wrapper.py  batch_helper.py  builtin_group_loader.py  builtin_groups.txt  constants.py  data_models.py  kernel.py  main.py  post_processor.py  render_engine.py  special_episode_handler.py  storage_manager.py  tag_extractor.py  title_cleaner.py
src/anime_matcher/anitopy/: anitopy.py  keyword.py  parser_helper.py  parser_number.py  tokenizer.py
src/anime_matcher/bgm_matcher/: constants.py  logic.py  utils.py
src/anime_matcher/providers/: __init__.py
src/anime_matcher/tmdb_matcher/: logic.py
src/anitopy/: parser.py
src/recognition_engine/: anitopy_wrapper.py  builtin_groups.txt  constants.py  kernel.py  path_parser.py  post_processor.py  special_episode_handler.py  tag_extractor.py
src/recognition_service/: __init__.py  config.py  context.py  main.py  recognizer.py  renderer.py  storage_manager.py
src/recognition_service/data_provider/: __init__.py  local_cache.py
src/recognition_service/pipeline/: __init__.py  enricher.py  maintenance.py  matcher.py  parser.py
src/recognition_service/render/: __init__.py  (+2 more)
(+7 files in other folders)
