[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-matcher"
version = "0.1.0"
description = "ANIMEProMatcher Recognition Kernel"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "regex",
    "fastapi",
    "uvicorn",
    "zhconv",
    "cn2an",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]
